font awesome best!!
font awesome ekledim ve birkaç küçük düzeltme 👍

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cahitcan Sarıtepe - Links</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
 <main>
@@ -17,13 +18,17 @@
     <ul>
         <li>
 
-            <a href="https://www.youtube.com/channel/UCGUlwy_JIg5ZuuZHBptOy1g" target="_blank"><img src="img/YouTube-Icon-Full-Color-Logo.wine.svg" alt="">Youtube</a></li>
+            <a href="https://www.youtube.com/channel/UCoz_MSGpM6NyzBULKYcL15w" target="_blank"><i class="fa-brands fa-youtube"></i> Youtube</a></li>
         <li>
 
-            <a href="https://twitter.com/cahsaro" target="_blank"><img src="img/Twitter-Logo.wine.svg" alt="">Twitter</a></li>
+            <a href="https://twitter.com/cahsaro" target="_blank"><i class="fa-brands fa-twitter-square"></i> Twitter</a></li>
         <li>
 
-            <a href="https://github.com/cahsar" target="_blank"><img src="img/GitHub-Logo.wine.svg" alt="">Github</a>
+            <a href="https://github.com/cahsar" target="_blank"><i class="fa-brands fa-github"></i> Github</a>
+        </li>
+        <li>
+
+            <a href="https://github.com/cahsar" target="_blank"><i class="fa-brands fa-linkedin"></i> LinkedIn</a>
         </li>
     </ul>
 </main>
