--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cahitcan Sarıtepe - Links</title>
+    <title>Cahitcan Sarıtepe</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
@@ -17,18 +17,22 @@
     </header>
     <ul>
         <li>
-
-            <a href="https://www.youtube.com/channel/UCoz_MSGpM6NyzBULKYcL15w" target="_blank"><i class="fa-brands fa-youtube"></i> Youtube</a></li>
-        <li>
-
-            <a href="https://twitter.com/cahsaro" target="_blank"><i class="fa-brands fa-twitter-square"></i> Twitter</a></li>
+            <a href="https://twitter.com/cahsaro" target="_blank"><i class="fa-brands fa-twitter-square"></i> Twitter</a>
+        </li>
         <li>
 
             <a href="https://github.com/cahsar" target="_blank"><i class="fa-brands fa-github"></i> Github</a>
         </li>
+        
         <li>
-
             <a href="https://github.com/cahsar" target="_blank"><i class="fa-brands fa-linkedin"></i> LinkedIn</a>
+        </li>
+      
+        <li>
+            <a href="https://www.youtube.com/channel/UCoz_MSGpM6NyzBULKYcL15w" target="_blank"><i class="fa-brands fa-youtube"></i> Youtube</a>
+        </li>
+                <li>
+            <a href="https://www.youtube.com/channel/UCoz_MSGpM6NyzBULKYcL15w" target="_blank"><i class="fa-brands fa-behance"></i> Behance</a>
         </li>
     </ul>
 </main>
