.net ne ya .com diye biliyordum.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a href="https://www.youtube.com/channel/UCoz_MSGpM6NyzBULKYcL15w" target="_blank"><i class="fa-brands fa-youtube"></i> Youtube</a>
         </li>
                 <li>
-            <a href="https://www.behance.com/cahitcan" target="_blank"><i class="fa-brands fa-behance"></i> Behance</a>
+            <a href="https://www.behance.net/cahitcan" target="_blank"><i class="fa-brands fa-behance"></i> Behance</a>
         </li>
     </ul>
 </main>
