--- a/index.html
+++ b/index.html
@@ -1,40 +1,86 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cahitcan Sarıtepe</title>
+    <title>cahit.dev</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 <body>
-<main>
-    <header>
-        <img src="./img/profile-photo.png" alt="">
-        <h1><a href="https://www.github.com/cahsar" target="_blank">@cahsar</a></h1>
-    </header>
-    <ul>
-        <li>
-            <a href="https://twitter.com/cahsaro" target="_blank"><i class="fa-brands fa-twitter-square"></i> Twitter</a>
-        </li>
-        <li>
+<section class="ilk-bolum yazi-konum">
+    <img src="avatar/avatar.png" alt="">
+    <h1>Cahitcan Sarıtepe</h1>
+    <h3>Student | Web Developer | UI / UX Designer</h3>
+    <a href="https://instagram.com/cahsar" target="_blank"><i class="fa-brands fa-instagram "></i></a>
+    <a href="https://twitter.com/cahsaro"><i class="fa-brands fa-twitter"></i></a>
+    <a href="http://github.com/cahsar"><i class="fa-brands fa-github"></i></a>
+    <a href="http://behance.net/cahitcan"><i class="fa-brands fa-behance"></i></a>
+    <a href="https://www.linkedin.com/in/cahitcan/"><i class="fa-brands fa-linkedin"></i></a>
+</section>
 
-            <a href="https://github.com/cahsar" target="_blank"><i class="fa-brands fa-github"></i> Github</a>
-        </li>
-        
-        <li>
-            <a href="https://github.com/cahsar" target="_blank"><i class="fa-brands fa-linkedin"></i> LinkedIn</a>
-        </li>
-      
-        <li>
-            <a href="https://www.youtube.com/channel/UCoz_MSGpM6NyzBULKYcL15w" target="_blank"><i class="fa-brands fa-youtube"></i> Youtube</a>
-        </li>
-                <li>
-            <a href="https://www.behance.net/cahitcan" target="_blank"><i class="fa-brands fa-behance"></i> Behance</a>
-        </li>
-    </ul>
-</main>
+<section class="ikinci-bolum yazi-konum">
+    <h2>About Me</h2>
+    <p>Hi! I am Cahitcan. I am 22 years old from Turkey 🇹🇷. I like  <span>Web Developing & UI / UX Designing.</span>  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, suscipit! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum cupiditate eveniet nostrum omnis possimus quis voluptatibus. At blanditiis illum quae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci, alias distinctio eveniet excepturi facilis fugiat, illo magni neque, odio perferendis vero?</p>
+</section>
+
+<section class="blogpost yazi-konum">
+    <h2>Blog Posts</h2>
+    <section class="cards">
+        <img src="gorsel/javascript-chess.png" alt="javascript-chess">
+        <h3>Javascript ile Satranç oyunu yapmak</h3>
+    </section>
+
+
+    <section class="cards">
+        <img src="gorsel/javascript-chess.png" alt="javascript-chess">
+        <h3>Javascript ile Satranç oyunu yapmak</h3>
+    </section>
+
+    <section class="cards">
+        <img src="gorsel/javascript-chess.png" alt="javascript-chess">
+        <h3>Javascript ile Satranç oyunu yapmak</h3>
+    </section>
+
+    <section class="cards">
+        <img src="gorsel/javascript-chess.png" alt="javascript-chess">
+        <h3>Javascript ile Satranç oyunu yapmak</h3>
+    </section>
+
+    <section class="cards">
+        <img src="gorsel/javascript-chess.png" alt="javascript-chess">
+        <h3>Javascript ile Satranç oyunu yapmak</h3>
+    </section>
+
+    <section class="cards">
+        <img src="gorsel/javascript-chess.png" alt="javascript-chess">
+        <h3>Javascript ile Satranç oyunu yapmak</h3>
+    </section>
+
+    <section class="cards">
+        <img src="gorsel/javascript-chess.png" alt="javascript-chess">
+        <h3>Javascript ile Satranç oyunu yapmak</h3>
+    </section>
+
+    <section class="cards">
+        <img src="gorsel/javascript-chess.png" alt="javascript-chess">
+        <h3>Javascript ile Satranç oyunu yapmak asdasdasdgdfgfdgdfgasdasdasd</h3>
+    </section>
+
+    <section class="cards">
+        <img src="gorsel/javascript-chess.png" alt="javascript-chess">
+        <h3>Javascript ile Satranç oyunu yapmak</h3>
+    </section>
+</section>
+
+<section class="ikinci-bolum yazi-konum form-bolumu">
+    <h2>Get in touch</h2>
+    <form action="">
+        <input type="text" placeholder="Name">
+        <input type="text" placeholder="Email">
+        <textarea rows="4" cols="50" placeholder="Write me..."></textarea>
+
+        <input type="submit" value="Send">
+    </form>
+</section>
 </body>
 </html>
