--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
     <img src="avatar/avatar.png" alt="">
     <h1>Cahitcan Sarıtepe</h1>
     <h3>Student | Web Developer | UI / UX Designer</h3>
-    <a href="https://instagram.com/cahsar" target="_blank"><i class="fa-brands fa-instagram "></i></a>
-    <a href="https://twitter.com/cahsaro"><i class="fa-brands fa-twitter"></i></a>
     <a href="http://github.com/cahsar"><i class="fa-brands fa-github"></i></a>
     <a href="http://behance.net/cahitcan"><i class="fa-brands fa-behance"></i></a>
     <a href="https://www.linkedin.com/in/cahitcan/"><i class="fa-brands fa-linkedin"></i></a>
+    <a href="https://twitter.com/cahsaro"><i class="fa-brands fa-twitter"></i></a>
+    <a href="https://instagram.com/cahsar" target="_blank"><i class="fa-brands fa-instagram "></i></a>
+
 </section>
 
 <section class="ikinci-bolum yazi-konum">
     <h2>About Me</h2>
-    <p>Hi! I am Cahitcan. I am 22 years old from Turkey 🇹🇷. I like  <span>Web Developing & UI / UX Designing.</span>  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, suscipit! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum cupiditate eveniet nostrum omnis possimus quis voluptatibus. At blanditiis illum quae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci, alias distinctio eveniet excepturi facilis fugiat, illo magni neque, odio perferendis vero?</p>
+    <p>Hi! I am Cahitcan. I am 22 years old from Turkey 🇹🇷. I like  <span> Web Design and UI / UX.</span>  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, suscipit! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum cupiditate eveniet nostrum omnis possimus quis voluptatibus. At blanditiis illum quae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci, alias distinctio eveniet excepturi facilis fugiat, illo magni neque, odio perferendis vero?</p>
 </section>
 
 <section class="blogpost yazi-konum">
