More Social Media bois

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <img src="avatar/avatar.png" alt="">
     <h1>Cahitcan Sarıtepe</h1>
     <h3>Student | Web Developer | UI / UX Designer</h3>
-    <a href="http://github.com/cahsar"><i class="fa-brands fa-github"></i></a>
-    <a href="http://behance.net/cahitcan"><i class="fa-brands fa-behance"></i></a>
-    <a href="https://www.linkedin.com/in/cahitcan/"><i class="fa-brands fa-linkedin"></i></a>
-    <a href="https://twitter.com/cahsaro"><i class="fa-brands fa-twitter"></i></a>
-    <a href="https://instagram.com/cahsar" target="_blank"><i class="fa-brands fa-instagram "></i></a>
-
+    <a href="http://github.com/cahsar" target="blank"><i class="fa-brands fa-github"></i></a>
+    <a href="http://behance.net/cahitcan" target="blank"><i class="fa-brands fa-behance"></i></a>
+    <a href="https://www.linkedin.com/in/cahitcan/" target="blank"><i class="fa-brands fa-linkedin"></i></a>
+    <a href="https://twitter.com/cahsaro" target="blank"><i class="fa-brands fa-twitter"></i></a>
+    <a href="https://instagram.com/cahsar" target="blank"><i class="fa-brands fa-instagram "></i></a>
+    <a href="https://dribbble.com/cahitcan" target="blank"><i class="fa-brands fa-dribbble "></i></a>
+    
 </section>
 
 <section class="ikinci-bolum yazi-konum">
