--- a/index.html
+++ b/index.html
@@ -84,5 +84,6 @@
         <input type="submit" value="Send">
     </form>
 </section>
+<script src="https://app.embed.im/snow.js" defer></script>
 </body>
 </html>
